--- a/BJJInParadise.Web/Web.config
+++ b/BJJInParadise.Web/Web.config
@@ -8,7 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-
+  <connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(local);Integrated Security=True;Initial Catalog=BJJInParadise;Connect Timeout=15;Encrypt=False;Packet Size=4096" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
