Chaning picture to marcios

--- a/BJJInParadise.Web/BJJInParadise.Web.csproj
+++ b/BJJInParadise.Web/BJJInParadise.Web.csproj
@@ -359,6 +359,7 @@
     <Content Include="Images\lacoloniabjj.png" />
     <Content Include="Images\laugh.JPG" />
     <Content Include="Images\Manialtepec.png" />
+    <Content Include="Images\marciohelping.jpg" />
     <Content Include="Images\montate-a-la-aventura.jpg" />
     <Content Include="Images\oscar.jpg" />
     <Content Include="Content\agency\agency.css" />
