--- a/BJJInParadise.Web/packages.config
+++ b/BJJInParadise.Web/packages.config
@@ -5,6 +5,7 @@
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net471" />
   <package id="Autofac.Mvc5.Owin" version="4.0.1" targetFramework="net471" />
   <package id="Autofac.Owin" version="4.2.0" targetFramework="net471" />
+  <package id="AutoMapper" version="7.0.1" targetFramework="net471" />
   <package id="bootstrap" version="4.1.1" targetFramework="net471" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net471" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net471" />
@@ -46,5 +47,6 @@
   <package id="PayPal" version="1.9.1" targetFramework="net471" />
   <package id="popper.js" version="1.14.3" targetFramework="net471" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.5.0" targetFramework="net471" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net471" />
   <package id="WebGrease" version="1.6.0" targetFramework="net471" />
 </packages>
