--- a/BJJInParadise.Web/Web.Release.config
+++ b/BJJInParadise.Web/Web.Release.config
@@ -15,7 +15,7 @@
     </connectionStrings>
   -->
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(local);Integrated Security=False;Initial Catalog=BJJInParadise;Integrated Security=False;Connect Timeout=15;Encrypt=False;Packet Size=4096;User ID=steve;Password=sfaSA8993*((#" providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnection" connectionString="Data Source=184.168.194.51;Integrated Security=False;User ID=steve;Connect Timeout=15;Encrypt=False;Packet Size=4096;Initial Catalog=BJJInParadise;Password=sfaSA8993*((#" providerName="System.Data.SqlClient"/>
 
     </connectionStrings>
   <system.web>
