--- a/BJJInParadise.Web/Web.Release.config
+++ b/BJJInParadise.Web/Web.Release.config
@@ -20,6 +20,8 @@
     </connectionStrings>
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
+
+ 
     <!--
       In the example below, the "Replace" transform will replace the entire
       <customErrors> section of your Web.config file.
@@ -32,4 +34,6 @@
       </customErrors>
     -->
   </system.web>
+  <system.codedom xdt:Transform="Remove">
+  </system.codedom>
 </configuration>
