--- a/BJJInParadise.Web/BJJInParadise.Web.csproj
+++ b/BJJInParadise.Web/BJJInParadise.Web.csproj
@@ -238,25 +238,10 @@
     <Compile Include="ViewModels\UserViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\assets\css\bootstrap.min.css" />
-    <Content Include="Content\assets\css\demo.css" />
-    <Content Include="Content\assets\css\material-bootstrap-wizard.css" />
-    <Content Include="Content\assets\img\apple-icon.png" />
-    <Content Include="Content\assets\img\default-avatar.png" />
-    <Content Include="Content\assets\img\favicon.png" />
-    <Content Include="Content\assets\img\new_logo.png" />
-    <Content Include="Content\assets\img\thumb_list_boat.png" />
-    <Content Include="Content\assets\img\thumb_list_place.png" />
-    <Content Include="Content\assets\img\thumb_register.png" />
-    <Content Include="Content\assets\img\tim_80x80.png" />
-    <Content Include="Content\assets\img\wizard-book.jpg" />
-    <Content Include="Content\assets\img\wizard-city.jpg" />
-    <Content Include="Content\assets\img\wizard-profile.jpg" />
-    <Content Include="Content\assets\js\bootstrap.min.js" />
-    <Content Include="Content\assets\js\jquery-2.2.4.min.js" />
-    <Content Include="Content\assets\js\jquery.bootstrap.js" />
-    <Content Include="Content\assets\js\jquery.validate.min.js" />
-    <Content Include="Content\assets\js\material-bootstrap-wizard.js" />
+    <Content Include="Content\smart_wizard.css" />
+    <Content Include="Content\smart_wizard_theme_arrows.css" />
+    <Content Include="Content\smart_wizard_theme_circles.css" />
+    <Content Include="Content\smart_wizard_theme_dots.css" />
     <Content Include="Content\unitegallery-master\dist\css\unite-gallery.css" />
     <Content Include="Content\unitegallery-master\dist\images\button-close.png" />
     <Content Include="Content\unitegallery-master\dist\images\cover-grid.png" />
@@ -444,33 +429,6 @@
     <Content Include="fonts\fontawesome-webfont.woff" />
     <Content Include="fonts\fontawesome-webfont.ttf" />
     <Content Include="fonts\fontawesome-webfont.eot" />
-    <Content Include="Content\assets\.DS_Store" />
-    <Content Include="Content\assets\css\.DS_Store" />
-    <Content Include="Content\assets\img\.DS_Store" />
-    <Content Include="Content\assets\js\.DS_Store" />
-    <Content Include="Content\assets\scss\material-bootstrap-wizard.scss" />
-    <Content Include="Content\assets\scss\material-bootstrap-wizard\mixins\_buttons.scss" />
-    <Content Include="Content\assets\scss\material-bootstrap-wizard\mixins\_inputs.scss" />
-    <Content Include="Content\assets\scss\material-bootstrap-wizard\mixins\_vendor-prefixes.scss" />
-    <Content Include="Content\assets\scss\material-bootstrap-wizard\_buttons.scss" />
-    <Content Include="Content\assets\scss\material-bootstrap-wizard\_card.scss" />
-    <Content Include="Content\assets\scss\material-bootstrap-wizard\_checkboxes.scss" />
-    <Content Include="Content\assets\scss\material-bootstrap-wizard\_colors.scss" />
-    <Content Include="Content\assets\scss\material-bootstrap-wizard\_footers.scss" />
-    <Content Include="Content\assets\scss\material-bootstrap-wizard\_inputs-size.scss" />
-    <Content Include="Content\assets\scss\material-bootstrap-wizard\_inputs.scss" />
-    <Content Include="Content\assets\scss\material-bootstrap-wizard\_misc.scss" />
-    <Content Include="Content\assets\scss\material-bootstrap-wizard\_mixins.scss" />
-    <Content Include="Content\assets\scss\material-bootstrap-wizard\_navs-pagination.scss" />
-    <Content Include="Content\assets\scss\material-bootstrap-wizard\_radios.scss" />
-    <Content Include="Content\assets\scss\material-bootstrap-wizard\_responsive.scss" />
-    <Content Include="Content\assets\scss\material-bootstrap-wizard\_ripples.scss" />
-    <Content Include="Content\assets\scss\material-bootstrap-wizard\_shadows.scss" />
-    <Content Include="Content\assets\scss\material-bootstrap-wizard\_tooltips.scss" />
-    <Content Include="Content\assets\scss\material-bootstrap-wizard\_typography.scss" />
-    <Content Include="Content\assets\scss\material-bootstrap-wizard\_variables.scss" />
-    <Content Include="Content\assets\scss\material-bootstrap-wizard\_variables_bootstrap.scss" />
-    <Content Include="Content\assets\scss\material-bootstrap-wizard\_wizard-card.scss" />
     <None Include="Properties\PublishProfiles\CustomProfile.pubxml" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
@@ -495,6 +453,7 @@
     <Content Include="Scripts\jquery-3.3.1.slim.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
     <Content Include="Scripts\jquery.easing.1.3.js" />
+    <Content Include="Scripts\jquery.smartWizard.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
