--- a/BJJInParadise.Web/BJJInParadise.Web.csproj
+++ b/BJJInParadise.Web/BJJInParadise.Web.csproj
@@ -221,6 +221,7 @@
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\BookingController.cs" />
     <Compile Include="Controllers\CampController.cs" />
+    <Compile Include="Controllers\CampRoomOptionController.cs" />
     <Compile Include="Controllers\GalleryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -531,6 +532,7 @@
     <Content Include="Views\User\Delete.cshtml" />
     <Content Include="Views\User\Details.cshtml" />
     <Content Include="Views\Booking\_BookingAccordian.cshtml" />
+    <Content Include="Views\CampRoomOption\_Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BjjInParadise.Business\BjjInParadise.Business.csproj">
