--- a/BjjInParadise.Business/BjjInParadise.Business.csproj
+++ b/BjjInParadise.Business/BjjInParadise.Business.csproj
@@ -64,6 +64,7 @@
     <Compile Include="AccountService.cs" />
     <Compile Include="BaseCrudService.cs" />
     <Compile Include="BookingService.cs" />
+    <Compile Include="CampRoomOptionService.cs" />
     <Compile Include="CampService.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
