--- a/BjjInParadise.Data/BjjInParadise.Data.csproj
+++ b/BjjInParadise.Data/BjjInParadise.Data.csproj
@@ -64,6 +64,10 @@
     <Compile Include="Migrations\201806300123492_addspots.Designer.cs">
       <DependentUpon>201806300123492_addspots.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201806300230004_other.cs" />
+    <Compile Include="Migrations\201806300230004_other.Designer.cs">
+      <DependentUpon>201806300230004_other.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -91,6 +95,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201806300123492_addspots.resx">
       <DependentUpon>201806300123492_addspots.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201806300230004_other.resx">
+      <DependentUpon>201806300230004_other.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
