--- a/BJJInParadise.Web/BJJInParadise.Web.csproj
+++ b/BJJInParadise.Web/BJJInParadise.Web.csproj
@@ -234,6 +234,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\CreateCampRoomOptionViewModel.cs" />
     <Compile Include="ViewModels\CreateCampViewModel.cs" />
     <Compile Include="ViewModels\NewBookingViewModel.cs" />
     <Compile Include="ViewModels\UserViewModel.cs" />
@@ -533,6 +534,9 @@
     <Content Include="Views\User\Details.cshtml" />
     <Content Include="Views\Booking\_BookingAccordian.cshtml" />
     <Content Include="Views\CampRoomOption\_Index.cshtml" />
+    <Content Include="Views\CampRoomOption\Create.cshtml" />
+    <Content Include="Views\CampRoomOption\Edit.cshtml" />
+    <Content Include="Views\CampRoomOption\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BjjInParadise.Business\BjjInParadise.Business.csproj">
