--- a/BJJInParadise.Web/Web.Release.config
+++ b/BJJInParadise.Web/Web.Release.config
@@ -34,6 +34,14 @@
       </customErrors>
     -->
   </system.web>
+  <!-- PayPal SDK settings -->
+  <paypal xdt:Transform="Replace">
+    <settings>
+      <add name="mode" value="live" />
+      <add name="clientId" value="AbYml2Bi2Z4yOkZ0SaanEZL_lCTlplR40SuNR53ufb_lxxBR6ZPm0HU10CiZx3Zx3Zk3T-DGCv4ylld6j-F" />
+      <add name="clientSecret" value="EECofRFv18c4iY8mh9ZitDfcQBHEqZ115yhqKfAN7nR41Ec_Vv1586aFqss81XynP3CcvEivA48zkoKO" />
+    </settings>
+  </paypal>
   <system.codedom xdt:Transform="Remove">
   </system.codedom>
 </configuration>
