--- a/BJJInParadise.Web/BJJInParadise.Web.csproj
+++ b/BJJInParadise.Web/BJJInParadise.Web.csproj
@@ -240,6 +240,7 @@
     <Compile Include="ViewModels\UserViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\card.css" />
     <Content Include="Content\smart_wizard.css" />
     <Content Include="Content\smart_wizard_theme_arrows.css" />
     <Content Include="Content\smart_wizard_theme_circles.css" />
@@ -440,6 +441,7 @@
     <Content Include="Scripts\bootstrap.js.map" />
     <Content Include="Scripts\bootstrap.bundle.min.js.map" />
     <Content Include="Scripts\bootstrap.bundle.js.map" />
+    <Content Include="Scripts\card.js" />
     <Content Include="Scripts\esm\popper-utils.js" />
     <Content Include="Scripts\esm\popper-utils.min.js" />
     <Content Include="Scripts\esm\popper.js" />
@@ -454,6 +456,7 @@
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.card.js" />
     <Content Include="Scripts\jquery.easing.1.3.js" />
     <Content Include="Scripts\jquery.smartWizard.js" />
     <Content Include="Scripts\jquery.validate.js" />
