--- a/BjjInParadise.Data/BjjInParadise.Data.csproj
+++ b/BjjInParadise.Data/BjjInParadise.Data.csproj
@@ -48,29 +48,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BjjInParadiseContext.cs" />
-    <Compile Include="Migrations\201806110654168_Initial.cs" />
-    <Compile Include="Migrations\201806110654168_Initial.Designer.cs">
-      <DependentUpon>201806110654168_Initial.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806240617213_TheNextOne.cs" />
-    <Compile Include="Migrations\201806240617213_TheNextOne.Designer.cs">
-      <DependentUpon>201806240617213_TheNextOne.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806300021596_AddCampRoomOptions.cs" />
-    <Compile Include="Migrations\201806300021596_AddCampRoomOptions.Designer.cs">
-      <DependentUpon>201806300021596_AddCampRoomOptions.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806300123492_addspots.cs" />
-    <Compile Include="Migrations\201806300123492_addspots.Designer.cs">
-      <DependentUpon>201806300123492_addspots.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201806300230004_other.cs" />
-    <Compile Include="Migrations\201806300230004_other.Designer.cs">
-      <DependentUpon>201806300230004_other.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201807011621154_Remove_Participants.cs" />
-    <Compile Include="Migrations\201807011621154_Remove_Participants.Designer.cs">
-      <DependentUpon>201807011621154_Remove_Participants.cs</DependentUpon>
+    <Compile Include="Migrations\201807011901365_initial.cs" />
+    <Compile Include="Migrations\201807011901365_initial.Designer.cs">
+      <DependentUpon>201807011901365_initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -88,23 +68,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201806110654168_Initial.resx">
-      <DependentUpon>201806110654168_Initial.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806240617213_TheNextOne.resx">
-      <DependentUpon>201806240617213_TheNextOne.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806300021596_AddCampRoomOptions.resx">
-      <DependentUpon>201806300021596_AddCampRoomOptions.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806300123492_addspots.resx">
-      <DependentUpon>201806300123492_addspots.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201806300230004_other.resx">
-      <DependentUpon>201806300230004_other.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201807011621154_Remove_Participants.resx">
-      <DependentUpon>201807011621154_Remove_Participants.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201807011901365_initial.resx">
+      <DependentUpon>201807011901365_initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
