--- a/BJJInParadise.Web/BJJInParadise.Web.csproj
+++ b/BJJInParadise.Web/BJJInParadise.Web.csproj
@@ -541,6 +541,7 @@
     <Content Include="Views\CampRoomOption\Edit.cshtml" />
     <Content Include="Views\CampRoomOption\Delete.cshtml" />
     <Content Include="Views\Booking\Confirmation.cshtml" />
+    <Content Include="Views\Camp\ViewCamp.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BjjInParadise.Business\BjjInParadise.Business.csproj">
