--- a/BJJInParadise.Web/Web.Release.config
+++ b/BJJInParadise.Web/Web.Release.config
@@ -14,6 +14,12 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+  <appSettings xdt:Transform="Replace">
+  <add key="BraintreeEnvironment" value="production" />
+  <add key="BraintreeMerchantId" value="qrmtkndctq5d9f68" />
+  <add key="BraintreePublicKey" value="ypdg68mh8y8mpj6y" />
+  <add key="BraintreePrivateKey" value="4379530842a0819d6eb1607e0d4d0f4f" />
+    </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=184.168.194.51;Integrated Security=False;User ID=steve;Connect Timeout=15;Encrypt=False;Packet Size=4096;Initial Catalog=BJJInParadise;Password=sfaSA8993*((#" providerName="System.Data.SqlClient"/>
 
