--- a/BJJInParadise.Web/packages.config
+++ b/BJJInParadise.Web/packages.config
@@ -7,6 +7,7 @@
   <package id="Autofac.Owin" version="4.2.0" targetFramework="net471" />
   <package id="AutoMapper" version="7.0.1" targetFramework="net471" />
   <package id="bootstrap" version="4.1.1" targetFramework="net471" />
+  <package id="Braintree" version="3.2.1" targetFramework="net471" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net471" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net471" />
   <package id="Imgur.API" version="4.0.1" targetFramework="net471" />
