--- a/BJJInParadise.Web/Web.config
+++ b/BJJInParadise.Web/Web.config
@@ -11,13 +11,17 @@
     </configSections>
 
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(local);Integrated Security=True;Connect Timeout=15;Encrypt=False;Packet Size=4096;Initial Catalog=BJJInParadise;" providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnection" connectionString="Data Source=(local);Integrated Security=True;Connect Timeout=15;Encrypt=False;Packet Size=4096;Initial Catalog=BJJInParadise;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="BraintreeEnvironment" value="sandbox" />
+    <add key="BraintreeMerchantId" value="kp3xvwg9k5zybx4x" />
+    <add key="BraintreePublicKey" value="kq3z4mcgvmpnqwgy" />
+    <add key="BraintreePrivateKey" value="8e8cdb038200ddeeded2d9fafbfe41d9" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
