--- a/BJJInParadise.Web/BJJInParadise.Web.csproj
+++ b/BJJInParadise.Web/BJJInParadise.Web.csproj
@@ -243,6 +243,8 @@
     <Compile Include="ViewModels\UserViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Images\loader.gif" />
+    <Content Include="Scripts\blazy.js" />
     <Content Include="Scripts\card.css" />
     <Content Include="Content\smart_wizard.css" />
     <Content Include="Content\smart_wizard_theme_arrows.css" />
@@ -532,7 +534,6 @@
     <Content Include="Views\Booking\Index.cshtml" />
     <Content Include="Views\Camp\Upcoming.cshtml" />
     <Content Include="Views\Gallery\Index.cshtml" />
-    <Content Include="Views\Gallery\_galleryImages.cshtml" />
     <Content Include="Views\User\Index.cshtml" />
     <Content Include="Views\User\Edit.cshtml" />
     <Content Include="Views\User\Delete.cshtml" />
