Added require https

--- a/BJJInParadise.Web/Web.Release.config
+++ b/BJJInParadise.Web/Web.Release.config
@@ -14,11 +14,15 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
-  <appSettings xdt:Transform="Replace">
-  <add key="BraintreeEnvironment" value="production" />
-  <add key="BraintreeMerchantId" value="qrmtkndctq5d9f68" />
+  <appSettings  xdt:Transform="Replace">
+    <add key="webpages:Version" value="3.0.0.0" />
+    <add key="webpages:Enabled" value="false" />
+    <add key="ClientValidationEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="BraintreeEnvironment" value="production"  />
+  <add key="BraintreeMerchantId" value="qrmtkndctq5d9f68"  />
   <add key="BraintreePublicKey" value="ypdg68mh8y8mpj6y" />
-  <add key="BraintreePrivateKey" value="4379530842a0819d6eb1607e0d4d0f4f" />
+  <add key="BraintreePrivateKey" value="4379530842a0819d6eb1607e0d4d0f4f"/>
     </appSettings>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=184.168.194.51;Integrated Security=False;User ID=steve;Connect Timeout=15;Encrypt=False;Packet Size=4096;Initial Catalog=BJJInParadise;Password=sfaSA8993*((#" providerName="System.Data.SqlClient"/>
@@ -39,6 +43,8 @@
         <error statusCode="500" redirect="InternalError.htm"/>
       </customErrors>
     -->
+
+    <httpCookies httpOnlyCookies="true" requireSSL="true" lockItem="true" xdt:Transform="Replace" />
   </system.web>
   <!-- PayPal SDK settings -->
   <paypal xdt:Transform="Replace">
@@ -50,4 +56,18 @@
   </paypal>
   <system.codedom xdt:Transform="Remove">
   </system.codedom>
+
+  <system.webServer>
+    <rewrite>
+      <rules>
+        <rule name="HTTP to HTTPS redirect" stopProcessing="true">
+          <match url="(.*)" />
+          <conditions>
+            <add input="{HTTPS}" pattern="off" ignoreCase="true" />
+          </conditions>
+          <action type="Redirect" redirectType="Permanent" url="https://{HTTP_HOST}/{R:1}" />
+        </rule>
+      </rules>
+    </rewrite>
+  </system.webServer>
 </configuration>
