--- a/BJJInParadise.Web/Web.config
+++ b/BJJInParadise.Web/Web.config
@@ -11,7 +11,7 @@
     </configSections>
 
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(local);Integrated Security=True;Connect Timeout=15;Encrypt=False;Packet Size=4096;Initial Catalog=BJJInParadise;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=184.168.194.51;Initial Catalog=BJJInParadise;Persist Security Info=True;User ID=steve;Password=sfaSA8993*((#" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -32,6 +32,7 @@
     <httpModules> 
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
     </httpModules>
+    <httpCookies httpOnlyCookies="true" requireSSL="true"/>
   </system.web>
   <system.webServer>
     <modules>
