--- a/BJJInParadise.Web/Web.config
+++ b/BJJInParadise.Web/Web.config
@@ -11,8 +11,9 @@
     </configSections>
 
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=184.168.194.51;Initial Catalog=BJJInParadise;Persist Security Info=True;User ID=steve;Password=sfaSA8993*((#" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=(local);Integrated Security=True;Connect Timeout=15;Encrypt=False;Packet Size=4096;Initial Catalog=BJJInParadise;" providerName="System.Data.SqlClient" />
+    <!--  <add name="DefaultConnection" connectionString="Data Source=184.168.194.51;Initial Catalog=BJJInParadise;Persist Security Info=True;User ID=steve;Password=sfaSA8993*((#" providerName="System.Data.SqlClient" />
+ --> </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
