--- a/BJJInParadise.Web/Web.config
+++ b/BJJInParadise.Web/Web.config
@@ -26,7 +26,11 @@
     <trust level="Full" />
     <compilation debug="true" targetFramework="4.7.1" />
     <httpRuntime targetFramework="4.7.1" />
-    <customErrors mode="Off" />
+    <customErrors mode="On" defaultRedirect="Error">
+      <error statusCode="404" redirect="Error/NotFound" />
+      <error statusCode="403" redirect="Error/BadRequest" />
+      <error statusCode="500" redirect="Error" />
+    </customErrors>
     <httpModules>
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" />
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
